
Changes in JMurmel-1.3 relative to JMurmel-1.2

 * the interpreter now expands macros only once
 * allow #!...!# as multiline comment, add commandline argument --script


Changes in JMurmel-1.2 relative to JMurmel-1.1

 * changed/ fixed the behaviour around large numbers, no more silently cutting off decimal places
   when an integral number is needed
 * changed argument to sleep to "seconds" (was: internal-time-units-per-second),
   changed return value to nil (was: actually slept time in internal-time-units-per-second)
 * changed/ fixed "apply" from a special form to a function, "apply" no longer is a reserved word,
   "apply" now accepts symbols as the first argument as well
 * changed "::": renamed to "jmethod", static Java methods no longer want "nil" as a first (ignored) argument
 * changed macroexpand-1 to return multiple values as one would expect
 * changed setq to create undefined variables on the fly in interpreted mode

 * changed mlib: dotimes, dolist and doplist accept multiple result-forms (in an implicit progn)
   (was: only the first one was eval'd, the rest were silently ignored)
 * changed mlib: inplace modification macros (incf, decf...) now process 1 or more args
   (was: 1 or 2 arguments, anything more was silently ignored)

 * added the function "jproxy" to implement Java interfaces with Murmel code
 * added values, multiple-value-call and multiple-value-bind
 * added primitive functions assq, list*
 * added an optional parameter print-escape-p for primitive functions write, writeln, lnwrite
 * added special form "(declaim (optimize..."
 * added limited support for "macroexpand-1" in compiled code (quoted forms only)
 * errormessages contain the filename and linenumber (was: only linenumber)
 * added more complete support for "let dynamic" and "let* dynamic"
   (before 1.2 only "let* dynamic" in interpreted code was supported)
 * [f]round, [f]floor, [f]ceiling and [f]truncate now support 1 or 2 arguments (was: 1)